--- a/_includes/covid_card.html
+++ b/_includes/covid_card.html
@@ -1,5 +1,5 @@
 <div class="covid-card">
-  <h3><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" y="0px"
+  <h3><div><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" y="0px"
 	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
 	<g>
@@ -18,7 +18,7 @@
 	<g>
 		<circle cx="256" cy="162.84" r="27"/>
 	</g>
-</g></svg>COVID-19 UPDATE</h3>
+</g></svg>COVID-19 UPDATE</div> <i>(as of 2 April 2020)</i></h3>
   <div class="text-body">
     <p>We are still planning to hold ISMIR 2020 on the scheduled dates (11–15 October 2020).</p>
     <p>It is not clear yet whether it will be possible to have a physical component to the conference. In any scenario, we will have an online conference, and the Proceedings will be published online as usual.</p>
