--- a/_sass/components/_covid_update.scss
+++ b/_sass/components/_covid_update.scss
@@ -71,9 +71,17 @@
     // padding: 5px 10px;
     // border-radius: 4px;
     // display: inline-block;
+    display: flex;
+    align-items: center;
+    // justify-content: space-between;
     svg {
       margin-right: 5px;
       margin-bottom: -3px;
+    }
+    i {
+      margin-left: 30px;
+      font-size: 14px;
+      font-weight: 300;
     }
   }
   .text-body {
