--- a/_sass/components/_covid_update.scss
+++ b/_sass/components/_covid_update.scss
@@ -64,7 +64,7 @@
   border-radius: 4px;
   background-color: #FFFFE0;
   // display: flex;
-  padding: 1.875rem 1.25rem 1.25rem 1.25rem;
+  padding: 1.25rem;
   h3 {
     margin-bottom: 20px;
     // background-color: #F9DF74;
