--- a/_sass/components/_covid_update.scss
+++ b/_sass/components/_covid_update.scss
@@ -88,3 +88,14 @@
     font-size: 0.85rem;
   }
 }
+
+.virtual-update-card {
+  padding: 1.25rem;
+  border-radius: 4px;
+  background-color: #c6dd92;
+  font-size: 1.3rem;
+  font-weight: 600;
+  p {
+    margin: 0;
+  }
+}
