--- a/_includes/covid_card.html
+++ b/_includes/covid_card.html
@@ -24,7 +24,7 @@
     <p>The WiMIR workshop will take place as a virtual event.</p>
     <p>Please stay tuned for further updates.</p>
     <p>We are still planning to hold ISMIR 2020 on the scheduled dates (11–15 October 2020).</p>
-    <p>It is not clear yet whether it will be possible to have a physical component to the conference. In any scenario, we will have an online conference, and the Proceedings will be published online as usual.</p>
+    <!-- <p>It is not clear yet whether it will be possible to have a physical component to the conference. In any scenario, we will have an online conference, and the Proceedings will be published online as usual.</p> -->
     <p>Registration will not open before 1 July 2020.</p>
   </div>
 </div>
