--- a/_includes/covid_card.html
+++ b/_includes/covid_card.html
@@ -18,13 +18,13 @@
 	<g>
 		<circle cx="256" cy="162.84" r="27"/>
 	</g>
-</g></svg>COVID-19 UPDATE</div> <div class="date-update">as of 14 May 2020</div></h3>
+</g></svg>COVID-19 UPDATE</div> <div class="date-update">as of 7 July 2020</div></h3>
   <div class="text-body">
-    <p>WoRMS 2020 is cancelled and will resume next year.</p>
+    <p>The NLP4MusA workshop will be online.</p>
     <p>The WiMIR workshop will take place as a virtual event.</p>
-    <p>Please stay tuned for further updates.</p>
-    <p>We are still planning to hold ISMIR 2020 on the scheduled dates (11–15 October 2020).</p>
+    <p>WoRMS 2020 is cancelled and will resume next year.</p>
+    <p>We plan to open the registration by middle of July.</p>
     <!-- <p>It is not clear yet whether it will be possible to have a physical component to the conference. In any scenario, we will have an online conference, and the Proceedings will be published online as usual.</p> -->
-    <p>Registration will not open before 1 July 2020.</p>
+    <!-- <p>Registration will not open before 1 July 2020.</p> -->
   </div>
 </div>
